<resources>
    <string name="app_name">Trinity</string>
    <string name="introText">Hello, and welcome to the Trinity Project!</string>
    <string name="tutorialText">Start by clicking on a category below</string>
    <string name="soulButton">Soul</string>
    <string name="bodyButton">Body</string>
    <string name="mindButton">Mind</string>
    <string name="mind">MIND</string>
    <string name="soul">SOUL</string>
    <string name="fuck">fuck</string>
    <string name="_1234">1234</string>
    Mstring name=
</resources>
