<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/introTextview"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:text="@string/introText"
        app:layout_constraintBottom_toTopOf="@+id/tutorialTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tutorialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="600dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/tutorialText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mindButton"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="117dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="64dp"
        android:onClick="goToMind"
        android:text="@string/mindButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trinityValue" />

    <Button
        android:id="@+id/bodyButton"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:onClick="goToBody"
        android:text="@string/bodyButton"
        app:layout_constraintBottom_toTopOf="@+id/soulButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mindButton" />

    <Button
        android:id="@+id/soulButton"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="82dp"
        android:layout_marginEnd="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="goToSoul"
        android:text="@string/soulButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodyButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/trinityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="214dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="45dp"
        android:text="@string/_1234"
        app:layout_constraintBottom_toTopOf="@+id/mindButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorialTextView" />

</android.support.constraint.ConstraintLayout>